# Elastos.RT

./: .gitignore  .gitmodules  .travis.yml  README.md
Sources/Elastos/Blockchain/DIDInspector/: CDIDInspector.cpp  CDIDInspector.h  CMakeLists.txt  Elastos.DIDInspector.car  Elastos.DIDInspector.cmake
Sources/Elastos/Blockchain/DIDInspector/Utils/: BRAddress.c  BRAddress.h  BRCrypto.c  BRInt.c  BRKey.h  BTCBase58.cpp  BTCBase58.h  BTCKey.cpp  BTCKey.h  BigIntFormat.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  CMemBlock.h  Key.cpp  Key.h  Utils.cpp  Utils.h
Sources/Elastos/Blockchain/Did/: CDIDChecker.cpp  CDIDChecker.h  CDIDManager.cpp  CDIDManager.h  CMakeLists.txt  ElaDID.cpp  ElaDID.h  Elastos.DID.car  Elastos.DID.cmake
Sources/Elastos/Blockchain/Did/did/include/: IIdManager.h  IdManagerFactory.h  ididChecker.h  ididManager.h
Sources/Elastos/Blockchain/Wallet/: CElaWallet.cpp  CElaWallet.h  CMakeLists.txt  CMasterWallet.cpp  CMasterWallet.h  CMasterWalletManager.cpp  CMasterWalletManager.h  CWalletEnviroment.cpp  CWalletEnviroment.h  CWalletFactory.cpp  CWalletFactory.h  Elastos.Wallet.car  Elastos.Wallet.cmake  IdChainSubWallet.cpp  IdChainSubWallet.h  MainchainSubWallet.cpp  MainchainSubWallet.h  MasterWallet.cpp  MasterWallet.h  SidechainSubWallet.cpp  SidechainSubWallet.h  SubWallet.cpp  SubWallet.h
Sources/Elastos/Blockchain/Wallet/spv/include/: ISubWalletCallback.h
Sources/Elastos/LibCore/src/Lib/: CMakeLists.txt  sources
Sources/Elastos/LibCore/src/corelibrary/: AsynchronousCloseMonitor.cpp  Atomic.cpp  CMakeLists.txt  Elastos.CoreLibrary.car  Elastos.CoreLibrary.cmake  Symbols.cpp  dirs  sources
Sources/Elastos/LibCore/src/elastos/core/: AbstractStringBuilder.cpp  BlockGuard.cpp  CArrayOf.cpp  CBlockGuard.cpp  CBoolean.cpp  CByte.cpp  CChar32.cpp  CCloseGuard.cpp  CCloseGuardHelper.cpp  CDouble.cpp  CFloat.cpp  CInteger16.cpp  CInteger32.cpp  CInteger64.cpp  CMakeLists.txt  CObjectContainer.cpp  CObjectEnumerator.cpp  CPathClassLoader.cpp  CString.cpp  CSystem.cpp  CThread.cpp  CThreadGroup.cpp  CThrowable.cpp  CaseMapper.cpp  Character.cpp  ClassLoader.cpp  CoreUtils.cpp  Enum.cpp  HexStringParser.cpp  Init.cpp  IntegralToString.cpp  Math.cpp  NativeThread.cpp  Object.cpp  Os.cpp  RealToString.cpp  Runnable.cpp  Singleton.cpp  StrictMath.cpp  StringBuffer.cpp  (+9 more)
Sources/Elastos/LibCore/src/elastos/io/: BufferedInputStream.cpp  ByteArrayBuffer.cpp  ByteBuffer.cpp  CFileDescriptor.cpp  CFilePermission.cpp  CMakeLists.txt  CObjectOutputStream.cpp  CPlainFile.cpp  CRandomAccessFile.cpp  CharArrayWriter.cpp  CharBuffer.cpp  DataInputStream.cpp  DataOutputStream.cpp  DatagramChannelImpl.cpp  DirectByteBuffer.cpp  DoubleBuffer.cpp  File.cpp  FileChannelImpl.cpp  FileInputStream.cpp  FileOutputStream.cpp  FloatBuffer.cpp  InputStream.cpp  InputStreamReader.cpp  Int16Buffer.cpp  Int32Buffer.cpp  Int64Buffer.cpp  IoVec.cpp  MappedByteBuffer.cpp  MemoryBlock.cpp  OutputStream.cpp  PipeImpl.cpp  PrintStream.cpp  Reader.cpp  SelectorImpl.cpp  (+4 more)
Sources/Elastos/Runtime/Core/carapi/: CMakeLists.txt  carapi.cpp  locmod.cpp  sources  todo.cpp
Sources/Elastos/Runtime/Core/carrier/: CMakeLists.txt  elcarrierapi.cpp  elcarrierapi.h  sources
Sources/Elastos/Runtime/Core/elapi/: CMakeLists.txt  elapi.cpp  sources
Sources/Elastos/Runtime/Core/marshal/: CMakeLists.txt  dirs  metainfos.cpp  sources
Sources/Elastos/Runtime/Core/reflection/: CAnnotationInfo.cpp  CAnnotationInfo.h  CClassInfo.cpp  CClassInfo.h  CClsModule.cpp  CClsModule.h  CConstructorInfo.cpp  CConstructorInfo.h  CEntryList.cpp  CInterfaceInfo.h  CMakeLists.txt  CMethodInfo.cpp  CModuleInfo.cpp  CObjInfoList.cpp  adjustaddr.h  invoke.cpp  refutil.h  sources
Sources/Elastos/Runtime/Core/servicemanager/: CMakeLists.txt  CServiceManager.cpp  CServiceManager.h  sources
Sources/Sample/AutoGenerateJavaCodes/: CMakeLists.txt  CTestCar.cpp  CTestCar.h  CTestCar.java  CTestCarImpl.java  CTestCarUser.java  CTestCar_jni.cpp  Elastos.AutoGenerateJavaCodes.car  Elastos.AutoGenerateJavaCodes.cls  Elastos.AutoGenerateJavaCodes.cmake  sources
Sources/Sample/AutoGenerateJavaCodes/foregroundJava/: CMakeLists.txt  CSingletonTest.cpp  CSingletonTest.h  CSingletonTest.java  CSingletonTest_jni.cpp  CTestCar.cpp  CTestCar.h  CTestCar.java  CTestCarImpl.java  CTestCar_jni.cpp  Elastos.AutoGenerateJavaCodes.car  Elastos.AutoGenerateJavaCodes.cmake  ITestCar.java  ITestCar2.java
Sources/Sample/AutoGenerateJavaCodes/foregroundJava/Java/: Elastos.AutoGenerateJavaCodes.cmake
Sources/Sample/AutoGenerateJavaCodes/foregroundJni/: CSingletonTest.cpp  CSingletonTest.h  CSingletonTest.java  CSingletonTest_jni.cpp  CTestCar.cpp  CTestCar.h  CTestCar.java  CTestCarUser.java  CTestCar_jni.cpp  Elastos.AutoGenerateJavaCodes_jnionload.cpp
Sources/Sample/AutoGenerateJavaCodes/foregroundJni/Java/: CSingletonTest.java  CSingletonTest_jni.cpp  CTestCar.java  Elastos.AutoGenerateJavaCodes_jnionload.cpp  ITestCar.java
Sources/Sample/GenerateJava/Car/: CCarrierListener.cpp  CCarrierListener.h  CCarrierListener.java  CCarrierListener_jni.cpp  CHelloJava.cpp  CHelloJava.h  CHelloJava.java  CHelloJava_jni.cpp  CMakeLists.txt  GenerateJava.car  GenerateJava.cmake  GenerateJava_jnionload.cpp  ICarrierListener.java  IHelloJava.java
Sources/Sample/GenerateJava/Car/Java/: CCarrierListener.java  CCarrierListener_jni.cpp  CHelloJava.java  CHelloJava_jni.cpp  GenerateJava_jnionload.cpp  ICarrierListener.java
Sources/Sample/HelloCarDemo/Car/: CHelloCar.h  CMakeLists.txt  Elastos.HelloCarDemo.cmake  sources
Sources/Sample/HelloCarDemo/iOS/app/: CMakeLists.txt  CppInterface.mm  ViewController.m  ios.cmake
Sources/Sample/RPC/Chat/: CChat.cpp  CChat.h  CMakeLists.txt  Chat.car  Chat.cmake  sources
Sources/Sample/RPC/Exe/Client/: CClient.cpp  CClient.h  CMakeLists.txt  Client.car  Client.cmake  client.cpp  sources
Sources/Sample/RPC/Exe/Service/: CMakeLists.txt  CService.cpp  CService.h  Service.car  Service.cmake  service.cpp  sources
Sources/Sample/RPC/Switch/Car/: CMakeLists.txt  CSwitch.cpp  CSwitch.h  Switch.car  Switch.cmake  sources
(+2333 files in other folders)
